fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@ $size: 3000px;
 body{
   margin: 0;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 .radar-container {
